fix: filtersitems alignment

--- a/src/styles/merchandise.css
+++ b/src/styles/merchandise.css
@@ -39,7 +39,7 @@
   padding: 0 5vh;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   gap: 4vw;
   overflow-x: auto;
